tests/escript/scripts/escript_invalid_invalid_args_order.py.out
Error in script: At line 2, SyntaxError: non-default argument follows default argument