tests/escript/scripts/escript_invalid_invalid_args_order.py
# python3;failure
def func(a=5, b):
    pass